# Multi-Robot-Factory-ROS2

./: .gitignore  README.md
src/factory_description/: CMakeLists.txt  package.xml
src/factory_description/launch/: show_minimal.launch.py  show_workcell.launch.py
src/factory_description/urdf/: factory_minimal.urdf.xacro
src/factory_description/xacro/assemblies/: factory_workcell.xacro
src/factory_description/xacro/gripper/: vacuum_gripper.urdf.xacro
src/factory_description/xacro/pedestal/: pedestal.urdf.xacro
src/factory_description/xacro/sensors/: break_beam.urdf.xacro  logical_camera.urdf.xacro
src/factory_description/xacro/workcell/: workcell.urdf.xacro
src/factory_interfaces/: CMakeLists.txt  package.xml
src/factory_interfaces/action/: CounterWithDelay.action
src/factory_interfaces/msg/: ConveyorBeltState.msg  DetectedObject.msg  Kit.msg  KitObject.msg  KitTray.msg  LogicalCameraImage.msg  Model.msg  Order.msg  PopulationState.msg  Proximity.msg  StorageUnit.msg  TrayContents.msg  VacuumGripperState.msg
src/factory_interfaces/srv/: AGVControl.srv  ConvertMetresToFeet.srv  ConveyorBeltControl.srv  GetMaterialLocations.srv  PopulationControl.srv  SubmitTray.srv  VacuumGripperControl.srv
